got remove function working, have to fix styled comp, not showing styling right now

--- a/code/src/app.css
+++ b/code/src/app.css
@@ -3,9 +3,24 @@ body {
   color: white;
 }
 
+
+header {
+  display:flex;
+  justify-content: center;
+  font-size: 80px;
+  margin-right: 60px;
+}
+
 a {
+  display:flex;
+  justify-content: center;
+  align-items: center;
   color: white;
   text-decoration: none;
+  font-size: 14px;
+  font-family: Helvetica, sans-serif;
+  margin-right: 60px;
+  word-wrap: break-word;
 }
 
 a:hover {
@@ -14,27 +29,32 @@ a:hover {
 
 .album-card {
   position: relative;
+  
 }
 .image-container {
   position: relative;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 80px;
 }
 
-.image-container:hover {
+.image-container:hover img {
   opacity: 0.4;
- 
 }
 
-
-.icons:hover{
-  display: block;
+.image-container:hover .icons {
+  display: flex;
 }
+
 .icons-container {
   position: absolute;
-  z-index: 5;
+  z-index: 1;
   fill: white;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: 60px;
   top: 45%;
   left: 20%;
 }
@@ -44,12 +64,11 @@ a:hover {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  width: 180px;  
+  width: 180px;
   justify-content: space-between;
   display: none;
+
 }
-
-
 
 .heart,
 .dot {
@@ -65,22 +84,31 @@ a:hover {
 
 .album-container {
   max-width: 1200px;
-  grid-template-columns: repeat(1, 2fr);
+  grid-template-columns: repeat(1, 1fr);
   display: grid;
   grid-gap: 1rem;
   position: relative;
   background-size: cover;
   min-height: 50vh;
   padding: 20px;
-  margin: 0 auto;
+  margin: 0  auto;
 }
 
+header {
+  display:flex;
+  justify-content: center;
 
-/* Designed from Mobil first, from 668px show 2 cards */
-@media (min-width: 600px) {
+}
+/* Design Mobil first, under 668px show 1 card */
+
+@media (min-width: 668px) {
   .album-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .icons-container {
+    margin-left: 15px;
   }
 }
 
@@ -89,4 +117,15 @@ a:hover {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
   }
+
+  .icons-container {
+    margin-left: 15px;
+  }
+
+  header {
+    display:flex;
+    justify-content: center;
+    font-size: 80px;
+  }
+
 }
